--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </script>
 <head>
     <meta charset="utf-8" />
-    <title>AmirAli-Miltone</title>
+    <title>AmirAli</title>
     <link rel="icon" type="image/x-icon" href="assets/img/image.ico" />
     <script src="https://kit.fontawesome.com/c6b61f351e.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
@@ -24,9 +24,9 @@
             <header class="masthead" id="particle-js">
                 <div class="container d-flex h-100 align-items-center">
                     <div class="mx-auto text-center">
-                        <h1 class="mx-auto my-0 text-uppercase">AmirAli-Miltone</h1>
-                        <a href="https://discords.com/bio/p/militon" target="_blank"><button class="fox-button">Discord Bio</button></a>
-                        <a href="https://github.com/AmirAli-Miltone" target="_blank"><button class="fox-button">Github</button></a>
+                        <h1 class="mx-auto my-0 text-uppercase">AmirAli</h1>
+                        <a href="https://discords.com/bio/p/sorena" target="_blank"><button class="fox-button">Discord Bio</button></a>
+                        <a href="https://github.com/Amirali-Talion" target="_blank"><button class="fox-button">Github</button></a>
                         <div>
                             <p id="button-text" class="switch small text-center text-white-50" style="margin-left: 1px; margin-top: 40px;">Click me</p>
                             <label class="switch">
@@ -68,8 +68,8 @@
                             <font style="font-size: 40px"><i class="fab fa-github"></i></font>
                             <h4 class="text-uppercase m-0">Github</h4>
                             <hr class="my-4">
-                            <div class="small text-black-50"><a href="https://github.com/AmirAli-Miltone" target="_blank">AmirAli github</a>  <br>
-                                <div class="github-widget" data-username="AmirAli-Miltone"></div>
+                            <div class="small text-black-50"><a href="https://github.com/Amirali-Talion" target="_blank">AmirAli github</a>  <br>
+                                <div class="github-widget" data-username="Amirali-Talion"></div>
                                 <script src="https://unpkg.com/github-card@1.2.1/dist/widget.js"></script>
                             </div>
                             <br>
@@ -89,7 +89,7 @@
 
 
         <div class="footer small text-center text-white-50">
-        <footer><div class="container">By AmirAli-Miltone</div></footer>
+        <footer><div class="container">By AmirAli</div></footer>
     </div>
     </section>
 </body>
